terraform/modules/vpc/internet-gateway.tf
########################################
# Internet Gateway
########################################

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    local.common_tags,
    {
      Name = "${var.environment}-igw"
    }
  )
}
